# Luxelend-server

./: .env_example  .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
app/: __init__.py
app/controllers/: category_controller.py  gender_category_controller.py  gender_controler.py  gender_controller.py  men_product_controller.py  product_controller.py  product_properties_controller.py  property_category_controller.py  property_controler.py  women_product_controller.py
app/models/: category.py  gender.py  gender_category.py  men.py  product.py  product_image.py  product_properties.py  property.py  property_category.py  transaction.py  users.py  women.py
app/routes/: category_route.py  gender_category_route.py  gender_route.py  men_product_route.py  product_properties.py  product_route.py  property_category_route.py  property_route.py  women_product_route.py
